# moveit2

Documents/ITRI project/: 20231002學研合作規劃書(Q100).docx  FY113院級學研合作提案-Q100_1120920[ITRI提供情境].pptx  FY113院級學研合作提案-Q100_1130328.pptx  人機協作無治具作業技術研究計畫申請書-0328.docx
Documents/log/: latest_build
Documents/zed x mini/: ZEDX_Mini.step
Documents/資料備份區/: rg2_ros2.py
IIIIIIIII_TEST/apriltag_try/: apriltag_try.py
IIIIIIIII_TEST/handeye_calibration/: csv_try.py  handeye_calib_park.py  pose_data_record_flat.csv  pose_data_record_total.csv  sometransfer.py  sometransfer2.py
IIIIIIIII_TEST/log/: latest_build
IIIIIIIII_TEST/rg2 (urscript + urx)/: RG2 (urscript + urx)_1.py
IIIIIIIII_TEST/zed_camera_test/: normal_ref.py  streaming_receiver_ref.py
blob_ws_1207/install/: local_setup.sh  setup.sh
blob_ws_1207/log/: latest_build
command_endeffector_cartesian/install/: local_setup.sh  setup.sh
command_endeffector_cartesian/log/: latest_build
command_endeffector_cartesian/src/ur5_endeffector_cartesian/: CMakeLists.txt
command_endeffector_cartesian/src/ur5_endeffector_cartesian/launch/: ur5_ros2_cartesian.launch.py
command_endeffector_cartesian/src/ur5_endeffector_cartesian/src/: ur5_ros2_cartesian.cpp
command_everyjoints/install/: local_setup.sh  setup.sh
command_everyjoints/log/: latest_build
eye_in_hand_realsense/: available_spaces.json  setup.cfg  setup.py
eye_in_hand_realsense/install/: local_setup.sh  setup.sh
eye_in_hand_realsense/log/: latest_build
first_stage/install/: local_setup.sh  setup.sh
first_stage/log/: latest_build
hex v2 driver/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
hex v2 driver/log/: latest_build
realsense_test/: setup.py
realsense_test/install/: local_setup.sh  setup.sh  setup.zsh
realsense_test/log/: latest_build
rg2_ros2/install/: local_setup.sh  setup.sh
rg2_ros2/log/: latest_build
ur5_apriltag_move/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ur5_apriltag_move/log/: latest_build
ur5_apriltag_move/src/: apriltag.cpp
ur5_control/: package.xml  setup.py
yolov8_realsense/: package.xml  setup.py
zed_camera_publisher/: setup.cfg
zed_receiver/: package.xml  setup.cfg  setup.py
(+2085 files in other folders)
